Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,23 @@
-
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Assemble your Squad!</title>
+  </head>
+  <body>
+    <h1><%= @team.name %></h1>
+    <h2><%= @team.motto %></h2>
+    <h2>Hero 1</h2>
+    <p><%= @heros[0].name%></p><br>
+    <p><%= @heros[0].power%></p><br>
+    <p><%= @heros[0].bio%></p>
+    <h2>Hero 2</h2>
+    <p><%= @heros[1].name%></p><br>
+    <p><%= @heros[1].power%></p><br>
+    <p><%= @heros[1].bio%></p>
+    <h2>Hero 3</h2>
+    <p><%= @heros[2].name%></p><br>
+    <p><%= @heros[2].power%></p><br>
+    <p><%= @heros[2].bio%></p>
+  </body>
+</html>
