--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,7 +5,7 @@
     <title>Assemble your Squad!</title>
   </head>
   <body>
-    <h1><%= @team.name %></h1>
+    <h1><%= @team_name %></h1>
     <h2><%= @team.motto %></h2>
     <h2>Hero 1</h2>
     <p><%= @heros[0].name%></p><br>
