Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1><%= @team_name %></h1>
-    <h2><%= @team.motto %></h2>
+    <h2><%= @team_motto %></h2>
     <h2>Hero 1</h2>
     <p><%= @heros[0].name%></p><br>
     <p><%= @heros[0].power%></p><br>
