Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -8,16 +8,16 @@
     <h1><%= @team_name %></h1>
     <h2><%= @team_motto %></h2>
     <h2>Hero 1</h2>
-    <p><%= @heros_1_name%></p><br>
-    <p><%= @heros_1_power%></p><br>
-    <p><%= @heros_1_bio%></p>
+    <p><%= @hero_1_name%></p><br>
+    <p><%= @hero_1_power%></p><br>
+    <p><%= @hero_1_bio%></p>
     <h2>Hero 2</h2>
-    <p><%= @heros_2_name%></p><br>
-    <p><%= @heros_2_power%></p><br>
-    <p><%= @heros_2_bio%></p>
+    <p><%= @hero_2_name%></p><br>
+    <p><%= @hero_2_power%></p><br>
+    <p><%= @hero_2_bio%></p>
     <h2>Hero 3</h2>
-    <p><%= @heros_3_name%></p><br>
-    <p><%= @heros_3_power%></p><br>
-    <p><%= @heros_3_bio%></p>
+    <p><%= @hero_3_name%></p><br>
+    <p><%= @hero_3_power%></p><br>
+    <p><%= @hero_3_bio%></p>
   </body>
 </html>
