--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1><%= @team_name %></h1>
-    <h2><%= @team_motto %></h2>
+    <h2>Team Motto: <%= @team_motto %></h2>
     <h2>Hero 1</h2>
     <p><%= @hero_1_name%></p><br>
     <p><%= @hero_1_power%></p><br>
