--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -10,14 +10,14 @@
     <h2>Hero 1</h2>
     <p>Hero Name: <%= @hero_1_name%></p><br>
     <p>Hero Power: <%= @hero_1_power%></p><br>
-    <p>hero Biography: <%= @hero_1_bio%></p>
+    <p>Hero Biography: <%= @hero_1_bio%></p>
     <h2>Hero 2</h2>
     <p>Hero Name: <%= @hero_2_name%></p><br>
     <p>Hero Power: <%= @hero_2_power%></p><br>
-    <p>hero Biography: <%= @hero_2_bio%></p>
+    <p>Hero Biography: <%= @hero_2_bio%></p>
     <h2>Hero 3</h2>
     <p>Hero Name: <%= @hero_3_name%></p><br>
     <p>Hero Power: <%= @hero_3_power%></p><br>
-    <p>hero Biography: <%= @hero_3_bio%></p>
+    <p>Hero Biography: <%= @hero_3_bio%></p>
   </body>
 </html>
